--- a/quotes.yml
+++ b/quotes.yml
@@ -401,3 +401,27 @@
       - "There are to types of elections, 'me' elections and 'we' elections."
       - "On the left we are regaled by a romantic social democracy, in a which a re-inflated, unreformed and highly interventionist state will stand up to capitalist 'predators' while making ordinary workers instantly richer; lowering prices, raising wages and slowing the pace of deficit reduction. On the right is a nostalgic nationalism, with the promise of a detached Britain, glorifying the past, fearful of the future, insulated from the fast-moving and unsentimental reality of globalisation."
     title: "Race Plan"
+- 
+  37: 
+    author: "Hannah Fry"
+    quotes: 
+      - "Scientists currently think there are around 10,000 intelligent extraterrestrial civilizations in our galaxy."
+      - "This is known in economics as the ‘decoy effect’. What it demonstrates is that the presence of an irrelevant alternative can change how you view your choices."
+      - "This setup is known as the ‘stable marriage problem’, and the process through which the friends picked their partners is called the Gale-Shapley algorithm."
+      - "The last two points demonstrate a particularly surprising result: in short, the group who do the asking and risk continual rejection actually end up far better off than the group who sit back and accept a suitor’s advances."
+      - "In the prisoner’s dilemma, two suspects are being questioned separately about the same crime. They have two choices: to cooperate and stay silent and split the sentence between them, or to defect and rat on their friend."
+      - "Tit for tat isn’t about playground squabbling. It’s a strategy that encourages cooperation but punishes exploitation. The mathematical version involves cooperating at first, and then simply copying the previous move of your opponent. They stay cooperative, you stay cooperative. They cheat and defect on you, you cheat and defect on them. They go back to being nice, you go back to being nice."
+      - "Instead of knowing how many people you’ll date, the advanced problem only requires you to know how long you expect your dating life to be."
+      - "In relationships where both partners consider themselves as happy, bad behaviour is dismissed as unusual: ‘He’s under a lot of stress at the moment’ or ‘No wonder she’s grumpy, she hasn’t had a lot of sleep lately’. Couples in this enviable state will have a deep-seated positive view of their partner, which is only reinforced by any positive behaviour"
+    title: "The Mathematics of Love"
+- 
+  38: 
+    author: "William S Burroughs"
+    quotes: 
+      - "The first time he saw Carl, Lee thought, 'I could use that, if the family jewels weren’t in pawn to Uncle Junk.'"
+      - "Death was in every cell of his body. He gave off a faint, greenish steam of decay. Lee imagined he would glow in the dark."
+      - "In 1873 the pope issued a bull to the effect there would be no more discussion of the Immaculate Conception. I am issuing a similar bull in regard to that fifty dollars."
+      - "Automatic obedience, synthetic schizophrenia, mass-produced to order. That is the Russian dream, and America is not far behind."
+      - "The bureaucrats of both countries want the same thing: Control. The superego, the controlling agency, gone cancerous and berserk."
+      - "What happens when there is no limit? What is the fate of The Land Where Anything Goes?"
+    title: "Queer"
