--- a/quotes.yml
+++ b/quotes.yml
@@ -425,3 +425,8 @@
       - "The bureaucrats of both countries want the same thing: Control. The superego, the controlling agency, gone cancerous and berserk."
       - "What happens when there is no limit? What is the fate of The Land Where Anything Goes?"
     title: "Queer"
+- 
+  39:
+    author: "Henry David Thoreau"
+    quotes:
+      - "The price of anything is the amount of life you exchange for it."
