--- a/quotes.yml
+++ b/quotes.yml
@@ -430,3 +430,15 @@
     author: "Henry David Thoreau"
     quotes:
       - "The price of anything is the amount of life you exchange for it."
+-
+  40:
+    quotes:
+      - |-
+          6 reasons for burnout 
+          
+          Lack of Control
+          Insufficient Reward
+          Lack of Community
+          Absence of Fairness
+          Conflict in Values
+          Work Overload
